tests/ui/issues/issue-23217.stderr
error[E0599]: no variant or associated item named `A` found for enum `SomeEnum` in the current scope
  --> $DIR/issue-23217.rs:2:19
   |
LL | pub enum SomeEnum {
   | ----------------- variant or associated item `A` not found for this enum
LL |     B = SomeEnum::A,
   |                   ^ variant or associated item not found in `SomeEnum`
   |
help: there is a variant with a similar name
   |
LL -     B = SomeEnum::A,
LL +     B = SomeEnum::B,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
